--- a/web/templates/signup.html
+++ b/web/templates/signup.html
@@ -27,7 +27,7 @@
         </div>
         <div class="mb-4">
             <label for="email" class="form-label">Email Id</label>
-            <input type="text" class="form-control" id="email" name="email">
+            <input type="email" class="form-control" id="email" name="email">
         </div>
         <div class="mb-4">
             <label for="mobile" class="form-label">Mobile Number</label>
