--- a/web/static/css/Admin.css
+++ b/web/static/css/Admin.css
@@ -7,12 +7,12 @@
     z-index: 101;
 }
 .toast-body, .toast{
-    background-color: #98FF98;
-    color: #021945;
+    background-color: #D6EEB7;
+    color: #040403;
 }
 .redirect {
     font-size: small;
     border: none;
     margin-top: 1rem;
-    color: #98FF98;
+    color: #D6EEB7;
 }
