--- a/web/templates/error.html
+++ b/web/templates/error.html
@@ -1,8 +1,7 @@
 {{define "content"}}
     <div id="cover">
         <h1>Status {{.Status}}</h1>
-        <div id="introduction">{{.Message}}
-        </div>
+        <div id="introduction">{{.Message}}</div>
         <div class="d-grid gap-2 col-6 mx-auto">
             <a class="btn btn-primary" type="button" href="/">Back Home</a>
         </div>
