--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="mb-3">
-            <label for="identifier" class="form-label">Mobile Number or Email</label>
+            <label for="identifier" class="form-label" id="identifier-label">Mobile Number or Email</label>
             <input type="text" class="form-control" id="identifier" name="identifier" required>
         </div>
         <div class="mb-3">
