--- a/web/templates/add_dish.html
+++ b/web/templates/add_dish.html
@@ -33,7 +33,7 @@
 
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
+                    <textarea class="form-control" id="description" name="description" rows="3" maxlength="100" required></textarea>
                 </div>
 
                 <div class="mb-3">
@@ -43,20 +43,25 @@
                 <div class="mb-3">
                     <label class="form-label">Is it Vegetarian?</label><br>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="is_veg" id="veg" value="1" checked>
+                        <input class="form-check-input" type="radio" name="is_veg" id="veg" value=1 checked>
                         <label class="form-check-label" for="veg">Yes</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="is_veg" id="nonveg" value="0">
+                        <input class="form-check-input" type="radio" name="is_veg" id="nonveg" value=0>
                         <label class="form-check-label" for="nonveg">No</label>
                     </div>
                 </div>
-
                 <div class="mb-3">
                     <label for="spice_level" class="form-label">Spice Level (-5 to 5)</label>
-                    <input type="number" class="form-control" id="spice_level" name="spice_level" min="-5" max="5" required>
-                    <small class="form-text text-muted">Use negative values for sweet dishes (e.g., -5 is very sweet)</small>
+                    <input type="range" class="form-range" id="spice_level" name="spice_level" min=-5 max=5 value=0 step=1 oninput="document.getElementById('spice_value').innerText = this.value" required>
+                    <div>
+                        <small>
+                          Current: <span id="spice_value">0</span> <br>
+                          Use negative values for sweet dishes (e.g., -5 is very sweet)
+                        </small>
+                    </div>
                 </div>
+
 
                 <div class="text-end">
                     <button type="submit" class="btn btn-success">Add Dish</button>
