--- a/web/templates/bill.html
+++ b/web/templates/bill.html
@@ -21,7 +21,7 @@
                         <td>{{.ItemName}}</td>
                         <td>{{.Price}}</td>
                         <td>{{.Quantity}}</td>
-                        <td>₹{{.Price}}</td>
+                        <td>₹{{ mul .Price  .Quantity}}</td>
                     </tr>
                 {{end}}
             </tbody>
@@ -32,14 +32,11 @@
             <form action="/menu" method="GET">
                 <button class="btn btn-outline-secondary" type="submit">Back to Menu</button>
             </form>
-
-            <form action="/admin" method="GET">
-                <button class="btn btn-outline-success" type="submit"><i class="fa-solid fa-user-tie" title="Admin Page"></i></button>
-            </form>
-
-                <!-- <form action="/chef" method="GET">
-                    <button class="btn btn-outline-success" type="submit"><i class="fa-solid fa-utensils" title="Chef Page"></i></button>
-                </form> -->
+            {{if eq .Role "admin"}}
+                <form action="/admin" method="GET">
+                    <button class="btn btn-outline-success" type="submit"><i class="fa-solid fa-user-tie" title="Admin Page"></i></button>
+                </form>
+            {{end}}
 
         </div>
     </div>
