--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -27,7 +27,10 @@
                     {{if eq .Role "customer"}}
                         <a href="/menu">Customer</a>
                     {{end}}
-                    {{if and (ne .Role "admin") (ne .Role "chef") (ne .Role "customer")}}
+                    {{if eq .Role "lost"}}
+                        <a href="/">Lost</a>
+                    {{end}}
+                    {{if and (ne .Role "admin") (ne .Role "chef") (ne .Role "customer") (ne .Role "lost")}}
                         <a href="/">Guest</a>
                     {{end}}
                 </h3>
