--- a/web/templates/menu.html
+++ b/web/templates/menu.html
@@ -1,22 +1,6 @@
 {{define "content"}}
 <div class="container">
-    <div class="container">
-        <h4>Your Orders</h4>
-        <div class="d-flex gap-1 mb-3">
-            <button class="btn btn-outline-primary order-filter active" data-status="preparing">Preparing</button>
-            <button class="btn btn-outline-warning order-filter" data-status="payment_pending">Payment Pending</button>
-            <button class="btn btn-outline-success order-filter" data-status="completed">Completed</button>
-        </div>
-        <div class="overflow-auto">
-            {{range .Bills}}
-                <div class="orders-card card d-inline-block me-3 p-3 mb-3 mt-3" data-status="{{.Status}}">
-                    <h5 class="mb-2">#{{.OrderId}}</h5>
-                    <p class="mb-2">₹{{.Price}}</p>
-                    <a href="/bill/{{.Status}}/{{.OrderId}}" class="btn btn-sm btn-primary" target="_blank">View Bill</a>
-                </div>
-            {{end}}
-        </div>
-    </div>
+    <a href="/bill" class="btn btn-sm btn-success mb-3 bill-redirect">Your Bills</a>
     <h2>Menu</h2>
     <div class="main">
         <div id="main-menu">
