--- a/web/templates/bills.html
+++ b/web/templates/bills.html
@@ -54,7 +54,7 @@
     <div class="toast custom-toast show" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="d-flex toast-cover">
             <div class="toast-body">
-                You still have unpaid/ongoing orders. Please complete your orders before logging out
+                {{.Message}}
             </div>
             <button type="button" class="btn-close btn-close-black me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
