--- a/web/templates/menu.html
+++ b/web/templates/menu.html
@@ -1,6 +1,6 @@
 {{define "content"}}
 <div class="container">
-    <a href="/bill" class="btn btn-sm btn-success mb-3 bill-redirect">Your Bills</a>
+    <a href="/bill" class="btn btn-sm btn-success mb-3 bill-redirect">Your Orders</a>
     <h2>Menu</h2>
     <div class="main">
         <div id="main-menu">
