--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -6,8 +6,8 @@
             <br><br><br>Been here before? Hit <b>Login</b> and let's pick up where we left off!
             <br>First time here? Click <b>Sign Up</b> — we're excited to serve you something amazing!
         </div>
-        <div class="d-grid gap-2 col-6 mx-auto">
-            <a class="btn btn-primary" type="button" href="/login">Login</a>
+        <div class="d-flex">
+            <a class="btn btn-primary me-3" type="button" href="/login">Login</a>
             <a class="btn btn-primary" type="button" href="/signup">Sign Up</a>
         </div>
     </div>
